spec-0083: database steps, with the pool wait counted apart
kestrel-jdbc sends `query` and `update` over a `DataSource` the caller hands
in. No driver, no pool, no ORM and no result mapping: `java.sql` is the whole
of what it adds to a classpath, and the pool is the thing under test as often
as the database — one built here would have different limits from the one the
service runs.

The checkout is not the query, and the split is the point. `getConnection` is
timed on its own and reported beside the sample rather than inside it, so a
report can say the database answered in 3 ms and the users waited 400 ms for
a connection. A hand-written step cannot separate them without writing this
module, and folding them together is coordinated omission one layer down.

Rows are counted with `next()` and nothing in the body, because anything more
measures the driver's object mapping. A failure is a `SqlState` carrying the
code the database is required to give, so a deadlock, a unique violation and a
syntax error are three rows in a report rather than one saying `SQLException`.

Core gained the two numbers this needs, named for what they are rather than
for JDBC: `StepStats.queued` is a resource the generator owns, `produced` is
what the target sent back, and kestrel-jdbc reads them as `waitedForPool` and
`rows`. `StepSink` gained an `aside` with a default body, so a sink written as
a lambda stays one and the recording path is unchanged for every step with
neither number to report.

`binding` takes the parameters as a list rather than the spec's single value:
a statement takes as many parameters as it has placeholders, and a one-value
form needs a second name for every other statement.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01XMNStye5sKvVuHXdK5vuR5